[gd_scene load_steps=2 format=3 uid="uid://byjmvsbiw0pl2"]

[ext_resource type="Script" path="res://Scenes/PlatformerPlayer/PressurePlates/PressurePlateComponent.gd" id="1_m5l6r"]

[node name="PressurePlateComponent" type="Area2D" node_paths=PackedStringArray("senderComp")]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_m5l6r")
senderComp = NodePath("")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
